# hex-assistant-app

./: .gitignore  AGENTS.md  README.md  mise.toml  package-lock.json  package.json
docs/: 00-index.md  01-product-requirements.md  02-architecture-and-tech-selection.md  03-acceptance-and-risks.md  04-implementation-notes.md  05-release-and-diagnostics.md  06-live-client-fix-plan.md  perf-optimization-todo.md
docs/release/: 验证记录.md
release/: README.md  已知限制.md  诊断包导出说明.md  验证记录.md
scripts/: check_live_client_endpoints.py
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: export-release.rs
src-tauri/icons/: icon.icns
src-tauri/resources/dictionaries/: augments.zh-CN.json
src-tauri/resources/models/: README.md
src-tauri/resources/onnxruntime/: README.md
src-tauri/src/: apex.rs  app_paths.rs  calibration.rs  capture.rs  commands.rs  diagnostics.rs  lib.rs  live_client.rs  main.rs  models.rs  ocr.rs  orchestrator.rs  overlay.rs  resource_paths.rs  runtime_panel.rs  settings.rs  state_machine.rs  telemetry.rs
