[package]
name = "hex-assistant-app"
version = "0.1.0"
description = "LOL 海克斯助手"
authors = ["loccen"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "hex_assistant_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[test]]
name = "overlay"
path = "src/overlay.rs"

[[test]]
name = "ocr"
path = "src/ocr.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "image-ico"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2"
zip = { version = "2", default-features = false, features = ["deflate"] }
ort = { version = "2.0.0-rc.12", default-features = false, features = ["load-dynamic", "api-24"] }
xcap = "0.9.4"
image = { version = "0.25.10", default-features = false, features = ["png"] }
ndarray = "0.17.2"
sha2 = "0.10"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
scraper = "0.23"

[target.'cfg(windows)'.dependencies]
raw-window-handle = "0.6"

[[test]]
name = "capture"
path = "src/capture.rs"

[[test]]
name = "calibration"
path = "src/calibration.rs"

[[test]]
name = "apex"
path = "src/apex.rs"

[[test]]
name = "live_client"
path = "src/live_client.rs"

[[test]]
name = "state_machine"
path = "src/state_machine.rs"
